# pybind11_example

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  Note.md  Pipfile  README.md  setup.py
include/: gil_and_thread.hpp  numpy_example.hpp  numpy_opencv.hpp  utils.hpp
pybind11_example/: __init__.py
scripts/: example.py
src/: gil_and_thread.cpp  main.cpp  numpy_example.cpp  numpy_opencv.cpp
